--- a/blkstuff/blkstuff.vcxproj
+++ b/blkstuff/blkstuff.vcxproj
@@ -142,10 +142,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="aes.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="util.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="aes.h" />
     <ClInclude Include="magic_constants.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
